# terraform-google-cloudsql-export

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  main.tf  outputs.tf  pyproject.toml  variables.tf  versions.tf
cloudsql-export/: main.py  requirements.txt
examples/: main.tf  variables.tf
