[tool.poetry]
description = "Google Cloud Function which triggers Cloud SQL database exports"
authors = ["Sebastian Trebitz <sebastian@nephosolutions.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.154.0"
oauth2client = "^4.1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10"
flake8 = "^7.1"
functions-framework = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
